# lstm_vision

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  LSTM_model.py  README.md  functions.py  pyproject.toml  run.py  run_scripts.sh  setup.py  train_options.py
.github/workflows/: black.yml  isort.yml  pytest.yml
configs/: conf.json  conf.yaml
lstm-vision/: LSTM_model.py  run.py
lstm_vision/: LSTM_model.py  evaluate.py  functions.py  model.py  options.py  run.py  train.py  train_options.py  utils.py
mnist-lstm/: LSTM_model.py  functions.py  run.py  train_options.py
tests/: test__model_output.py
