[project]

name = "lstm-vision"
version = "1.2.0"
description = "LSTMs for computer vision (classification)"
authors = [
    {name = "Imahn Shekhzadeh", email = "imahn.shekhzadeh@unige.ch"},
]
license = {text = "MIT license"}
requires-python = ">=3.10"

dependencies = [
    "isort~=5.12.0",
    "black~=23.10.1",
    "wandb~=0.16.0",
    "termcolor~=2.3.0",
    "torchinfo~=1.8.0", 
    "prettytable~=3.9.0",
    "python-dotenv~=1.0.0",
    "matplotlib~=3.8.2",
]

[tool.isort]

profile = "black"
# necessary to get `isort` working in Docker container: 
overwrite_in_place = true

[tool.black]
line-length = 79
exclude = "setup.py"