[project]

name = "lstm-vision"
version = "1.2.0"
description = "LSTMs for computer vision (classification)"
authors = [
    {name = "Imahn Shekhzadeh", email = "imahn.shekhzadeh@unige.ch"},
]
license = {text = "MIT license"}
requires-python = ">=3.10"

dependencies = [
    "isort~=5.12",
    "black~=23.10",
    "wandb~=0.16",
    "termcolor~=2.3",
    "torchinfo~=1.8",
    "prettytable~=3.9",
    "python-dotenv~=1.0",
    "matplotlib~=3.2",
    "pre-commit",
]

[tool.isort]

profile="black"
line_length=79
# necessary to get `isort` working in Docker container:
overwrite_in_place=true
known_first_party=["utils", "LSTM_model"]
known_third_party=["wandb"]

[tool.black]
line-length = 79
exclude = "setup.py"
