[project]
name = "lstm-vision"
version = "1.5.0"
description = "LSTMs for computer vision (classification)"
authors = [
    {name = "Imahn Shekhzadeh", email = "imahn.shekhzadeh@unige.ch"},
]
license = {text = "MIT license"}
requires-python = ">=3.10"

# https://docs.astral.sh/uv/concepts/projects/dependencies/#platform-specific-dependencies
dependencies = [
    "isort==5.12.*",
    "black==23.10.*",
    "wandb==0.16.*",
    "torchinfo==1.8.*",
    "prettytable==3.9.*",
    "python-dotenv==1.0.*",
    "matplotlib>=3.2",
    "pre-commit",
    "zeus-ml==0.9.*",
    "hydra-core==1.3.*",
    "typeguard==4.4.*",
    "numpy==1.26.*",
    "torch==2.2.2",
    "torchvision==0.17.2",
]

# https://docs.astral.sh/uv/guides/integration/pytorch/#installing-pytorch
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.isort]
profile="black"
line_length=79
# necessary to get `isort` working in Docker container:
overwrite_in_place=true
known_first_party=["utils", "LSTM_model", "options", "train", "evaluate"]
known_third_party=["wandb"]

[tool.black]
line-length = 79
exclude = "setup.py"